# rag_accuracy_evaluator

./: .gitignore  LICENSE  __main__.py  config.model_vs_model.yaml  config.rag_vs_rag.yaml  evaluator.py  interfacehelper.py  openai_helpers.py  pyproject.toml  readme.md  report.py  sample_results.json  uploaders.py  utils.py
